[gd_scene format=3 uid="uid://c8agyi4ivpgo1"]

[ext_resource type="Script" uid="uid://brcuxsrq4gtha" path="res://Scripts/Peleas!/battle.gd" id="1_3kche"]
[ext_resource type="Texture2D" uid="uid://1142hsd4akvb" path="res://Fondos/Fondou.png" id="1_53g7e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_53g7e"]
size = Vector2(1140.5, 78)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5w5gp"]
size = Vector2(490, 49)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3kche"]

[node name="Battle" type="Node2D" unique_id=1680270957]
script = ExtResource("1_3kche")

[node name="TextureRect" type="TextureRect" parent="." unique_id=1680069340]
offset_left = 5.0
offset_right = 1925.0
offset_bottom = 1080.0
texture = ExtResource("1_53g7e")

[node name="Colisiones fondo" type="StaticBody2D" parent="." unique_id=1700091313]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colisiones fondo" unique_id=1299202783]
position = Vector2(964.75, 825)
shape = SubResource("RectangleShape2D_53g7e")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Colisiones fondo" unique_id=393563841]
position = Vector2(949, 599.5)
shape = SubResource("RectangleShape2D_5w5gp")

[node name="SpawnPoints" type="Node2D" parent="." unique_id=652633002]
position = Vector2(936, 2)

[node name="P1Spawn" type="Node2D" parent="SpawnPoints" unique_id=221704827]
position = Vector2(-414, 649)

[node name="P2Spawn" type="Node2D" parent="SpawnPoints" unique_id=1967935997]
position = Vector2(499, 662)

[node name="DeathZone" type="Area2D" parent="." unique_id=945113708]
position = Vector2(919, 1080)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone" unique_id=1096450627]
shape = SubResource("RectangleShape2D_3kche")

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1559470989]

[node name="ScoreLabel" type="Label" parent="CanvasLayer" unique_id=499772510]
offset_left = 699.0
offset_top = 973.0
offset_right = 1105.0
offset_bottom = 1069.0
theme_override_font_sizes/font_size = 70
text = "------------------"
